# Kindelia

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  TODO.md  WHITEBOOK.md  WHITEPAPER.md  breaking_changes.md  default.toml  docker-compose.yml  example.kdl  generate_pdf.sh  genesis.kdl  node.config.toml  rustfmt.toml  simple.kdl  test.kdl
.github/workflows/: bench.yml  cargo.yml  cb.yml  ci.yml
benches/: bench.rs
benches/kdl/: inc.kdl  lam_arith.kdl  lam_arith.pre.kdl  tree_sum.pre.kdl
bugs/: ambiguous_run.kdl
dev/bench/: data.js  index.html
dev/bench/assets/: index.11ec851b.js  index.41e8d5f7.css
example/: block_1.kdl  block_2.kdl  block_3.kdl  block_3.unsig.kdl  block_4.kdl  block_5.kdl  example.kdl  example.kindelia  post.kdl  private_key_1_namer  private_key_2_alice  private_key_3_bob  signed.kdl  simple.kdl  simple.kindelia
kdl/: big_fun_name.kdl  big_name.kdl  dup_not_resolved.kdl  dup_rebind.kdl  list.kdl  nested-dup.kdl  nonce.kdl  normalize.kdl  num-literal-overflow.kdl  save_app_app.kdl  tree.kdl  zero_div.kdl
kindelia/: Cargo.toml  default.toml
kindelia/benches/kdl/: tree_sum.kdl
kindelia/genesis/: README.md
kindelia/genesis/networks/: 0xCAFE0006.kdl
kindelia/src/: cli.rs  config.rs  files.rs  genesis.rs  main.rs  util.rs
kindelia/src/api/: client.rs
kindelia/tests/: cli.rs
kindelia_client/: Cargo.toml
kindelia_client/src/: lib.rs
kindelia_common/: Cargo.toml
kindelia_common/src/: crypto.rs  lib.rs  nohash_hasher.rs
kindelia_core/: Cargo.toml  genesis.kdl
kindelia_core/benches/: bench.rs
kindelia_core/proptest-regressions/test/: node.txt
kindelia_core/src/: api.rs  bits.rs  builder.rs  common.rs  config.rs  constants.rs  events.rs  hvm.rs  lib.rs  net.rs  node.rs  parser.rs  persistence.rs  util.rs
kindelia_core/src/runtime/: checks.rs  costs.rs  debug.rs  functions.rs  memory.rs  mod.rs
kindelia_core/src/test/: bits.rs  hasher.rs  hvm.rs  mod.rs  network.rs  node.rs  strategies.rs  util.rs
kindelia_lang/: Cargo.toml
kindelia_lang/src/: ast.rs  parser.rs
kindelia_server/: Cargo.toml
kindelia_server/src/: lib.rs
kindelia_ws/: Cargo.toml
kindelia_ws/src/: lib.rs
kindelia_ws_events/: Cargo.toml
kindelia_ws_events/src/: lib.rs
scripts/: bench.sh  bench_cmp.py  bench_simulation.py  cmp_show_table.sh  cov.sh  encode.py  log.sh  run_examples.sh  scc.sh  spread.sh  test.sh  unnamespacefy.sh
scripts/python/: branch_cmp.py  event_bencher.py
src/: NoHashHasher.rs  algorithms.rs  api.rs  bits.rs  cli.rs  common.rs  config.rs  constants.rs  crypto.rs  events.rs  headless.rs  hvm.rs  lib.rs  main.rs  net.rs  network.rs  node.rs  persistence.rs  serializer.rs  test.rs  types.rs  util.rs
src/api/: client.rs  http.rs  mod.rs  serialization.rs  server.rs
src/frontend/: headless.rs  mod.rs  tui.rs
src/test/: bits.rs  cli.rs  hasher.rs  hvm.rs  mod.rs  network.rs  node.rs  strategies.rs  util.rs
test/: big_fun_name.kdl  big_name.kdl  fold.kdl  inner_reduction_bug.kdl  list.kdl  missing_ctr.kdl  nested-dup.kdl  non-linear-dup-var.kdl  num-literal-overflow.kdl  num-signed.kdl  shadowing.kdl  tree.kdl  unbound-var.kdl
tests/: cli.rs
