[package]
name = "kindelia-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
bit-vec = "0.6.3"
# CLI arguments parser
clap = { version = "3.1.3", features = ["derive"] }
dirs = "4.0.0"
hex = "0.4"
im = "15.0.0"
num = "0.1.36"
pad = "0.1.6"
primitive-types = { version = "0.11.1" }
priority-queue = "1.2.1"
rand = "0.8.5"
sha3 = "0.9.1"
termion = "1.5.6"
fastrand = "1.7.0"
