[package]
name = "kindelia"
version = "0.1.7"
edition = "2021"
description = "An efficient, secure cryptocomputer."
license = "MIT"
repository = "https://github.com/Kindelia/Kindelia"

[features]
default = ["events"]
events = []

[[bin]]
name = "kindelia"
path = "src/main.rs"
bench = false

# Docs: https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
kindelia_common = { path = "../kindelia_common", version = "0.1.7" }
kindelia_lang = { path = "../kindelia_lang", version = "0.1.7" }
kindelia_core = { path = "../kindelia_core", version = "0.1.7" }
kindelia_client = { path = "../kindelia_client", version = "0.1.7" }
kindelia_server = { path = "../kindelia_server", version = "0.1.7" }
kindelia_ws = { path = "../kindelia_ws", version = "0.1.7" }

# Util
anyhow = { version = "1.0.66", features = ["backtrace"] }
dirs = "4.0.0"
hex = "0.4"
derive_builder = "0.11.2"

# CLI / configuration
clap = { version = "4.0.18", features = ["derive"] }
clap_complete = "4.0.3"
clap-num = "1.0.2"
toml = "0.5.9"

# Datastructures
# nohash-hasher = "0.2.0" # inlined, because we need u128

# API
serde = { version = "1.0.137" }
serde_json = "1.0"
warp = "0.3"

# Events API
tokio = { version = "1.19.1", features = ["sync"] }


[dev-dependencies]
assert_cmd = "1.0.1"
fastrand = "1.7.0"
httpmock = "0.6.6"
rstest = "0.15.0"
