[package]
name = "kindelia_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kindelia_lang = { path="../kindelia_lang" }
kindelia_core = { path="../kindelia_core" }

reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }

