[package]
name = "kindelia_client"
version = "0.1.7"
edition = "2021"
description = "An efficient, secure cryptocomputer."
license = "MIT"
repository = "https://github.com/Kindelia/Kindelia"


[dependencies]

kindelia_lang = { path="../kindelia_lang", version = "0.1.7" }
kindelia_core = { path="../kindelia_core", version = "0.1.7" }

reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
