[package]
name = "kindelia_core"
version = "0.1.7"
edition = "2021"
description = "An efficient, secure cryptocomputer."
license = "MIT"
repository = "https://github.com/Kindelia/Kindelia"

[features]
default = ["events"]
events = []

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

# Docs: https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

kindelia_common = { path = "../kindelia_common", version = "0.1.7" }
kindelia_lang = { path = "../kindelia_lang", version = "0.1.7" }

fastrand = "1.7.0"
rand = "0.8.5"

# Util
dirs = "4.0.0"
hex = "0.4"
derive_builder = "0.11.2"

# Crypto
secp256k1 = { version = "0.22.1", features = [
  "rand-std",
  "recovery",
  "global-context",
] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
sha3 = "0.9.1"

# Datastructures
bit-vec = "0.6.3"
primitive-types = { version = "0.11.1" }
priority-queue = "1.2.1"
# num = "0.1.36"

# API
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.19.1", features = ["sync"] }

# ERROR HANDLING
thiserror = "1.0.37"

[dev-dependencies]
proptest = "1.0.0"
rstest = "0.15.0"
rstest_reuse = "0.4.0"
petgraph = "0.6.2"
serde_json = "1.0"

# Benchmarking
criterion = "0.3"
