[package]
name = "kindelia_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kindelia_common = { path = "../kindelia_common" }
kindelia_lang = { path = "../kindelia_lang" }
kindelia_core = { path = "../kindelia_core" }

bit-vec = "0.6.3"
hex = "0.4"

serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.19.1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
warp = "0.3"
