[package]
name = "kindelia_server"
version = "0.1.7"
edition = "2021"
description = "An efficient, secure cryptocomputer."
license = "MIT"
repository = "https://github.com/Kindelia/Kindelia"


[dependencies]

kindelia_common = { path = "../kindelia_common", version = "0.1.7" }
kindelia_lang = { path = "../kindelia_lang", version = "0.1.7" }
kindelia_core = { path = "../kindelia_core", version = "0.1.7" }

bit-vec = "0.6.3"
hex = "0.4"

serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.19.1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
warp = "0.3"
