[package]
name = "kindelia_ws"
version = "0.1.7"
edition = "2021"

# Docs: https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

futures-util = { version = "0.3.21" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.19.1", features = ["sync"] }
warp = { version = "0.3" }
