[package]
name = "kindelia_ws"
version = "0.1.7"
edition = "2021"
description = "An efficient, secure cryptocomputer."
license = "MIT"
repository = "https://github.com/Kindelia/Kindelia"


[dependencies]

futures-util = { version = "0.3.21" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.19.1", features = ["sync"] }
warp = { version = "0.3" }
